# Cryptiom

./: .gitignore  Build-all.ps1  Clean-All.ps1  Client-Clean.ps1  Client_Build_Debug.ps1  Client_Build_Release.ps1  Client_Build_Run_Debug.ps1  Client_Build_Run_Release.ps1  Client_Clean.ps1  Server-Clean.ps1  Server_Build_Debug.ps1  Server_Build_Release.ps1  Server_Build_Run_Debug.ps1  Server_Build_Run_Release.ps1  Server_Clean.ps1
.run/: Run Client.run.xml
Client/: build.ps1  clean.ps1  compile_commands.json  export-compile-commands.lua  premake5.lua  runDebug.ps1  runRelease.ps1
Client/bin-int/Debug/: Client.exe.recipe
Client/bin-int/Debug/Client.tlog/: Cl.items.tlog  Client.lastbuildstate  clang-cl.command.1.tlog  clang-cl.read.1.tlog  clang-cl.write.1.tlog  lld-link.command.1.tlog  lld-link.read.1.tlog  lld-link.secondary.1.tlog  lld-link.write.1.tlog
Client/bin-int/Release/: Client.exe.recipe
Client/bin-int/Release/Client.tlog/: Cl.items.tlog  Client.lastbuildstate  clang-cl.command.1.tlog  clang-cl.write.1.tlog  lld-link.command.1.tlog  (+3 more)
Client/src/: AppState.hpp  config.cpp  config.hpp  error.hpp  main.cpp  option.hpp  result.hpp  server_connection.hpp
CodeCommon/: Cargo.toml
CodeCommon/crates/fs/: Cargo.toml
CodeCommon/crates/lilnuthing/: Cargo.toml
CodeCommon/crates/lilnuthing/src/: main.rs
CryptiomClient/: Cargo.toml
CryptiomClient/crates/cryptiom_client/: Cargo.toml
CryptiomClient/crates/settings/: Cargo.toml
CryptiomClient/crates/settings/src/: lib.rs
CryptiomServer/: Cargo.toml
CryptiomServer/crates/config/: Cargo.toml
CryptiomServer/crates/config/src/: defaultconfigserver.json  lib.rs
CryptiomServer/crates/cryptiom_server/: Cargo.toml
CryptiomServer/crates/cryptiom_server/src/: main.rs
CryptiomServer/crates/db/: Cargo.toml
CryptiomServer/crates/db/src/: lib.rs
CryptiomServer/crates/db/src/queries/: create_tables.sql  create_user.sql  enumerate_table.sql  login_sqcurity_key.sql  login_u_p_s_two_factor.sql  remove_stale_ip_bans.sql  remove_user.sql  remove_user_ban.sql  ret_salt.sql  security_key_login.sql  security_key_on_file.sql  user_exists.sql  user_has_security_key.sql
CryptiomServer/crates/macros/src/: lib.rs
CryptiomServer/crates/pretty_logs/: Cargo.toml
CryptiomServer/crates/pretty_logs/src/: lib.rs
CryptiomServer/crates/state/: Cargo.toml
CryptiomServer/crates/state/src/: lib.rs
CryptiomServer/crates/webserver/: Cargo.toml
CryptiomServer/crates/webserver/src/: lib.rs
CryptiomServer/crates/websockets/: Cargo.toml
Server/: Cargo.toml
export-compile-commands(modified)/: export-compile-commands.lua
