[workspace]
resolver = "2"
members = ["./crates/*"]

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
warp = { version = "0.3.7", features = ["compression", "tls"] }

settings = {path = "./crates/settings"}

[profile.dev]
incremental = true
debug = true

[profile.release]
incremental = true
opt-level = 3
debug = false
lto = "fat"
debug-assertions = false