[workspace]
workspace.resolver = "2"
members = ["crates/*"]
default-members = ["crates/cryptiom_server"]
[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
warp = { version = "0.3.7", features = ["compression", "tls"] }
age = { version = "0.11.1" , features = ["async"]}
rusqlite = { version = "0.33.0", features = ["bundled"] }
crossterm = "0.28.1"

state = {path = "./crates/state"}
fs = {path = "../CodeCommon/crates/fs"}
pretty_logs = {path = "./crates/pretty_logs"}
webserver = {path = "./crates/webserver"}
config = {path = "./crates/config"}
websockets = {path = "./crates/websockets"}
macros = {path = "./crates/macros"}

[profile.dev]
incremental = true
debug = true

[profile.release]
incremental = true
opt-level = 3
debug = false
lto = "fat"
debug-assertions = false

