[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tracing.workspace = true
crossterm.workspace = true


config.workspace = true
fs.workspace = true
pretty_logs.workspace = true
webserver.workspace = true
websockets.workspace = true
macros.workspace = true
state.workspace = true